添加详细的注释；添加文章；一些小改动

--- a/README
+++ b/README
@@ -1,1 +1,12 @@
 用ThinkPHP编写的第一个项目：简单的类似于个人博客的文章发布网站，功能包括前台的展示和后台的管理
+
+功能
+1. 文章列表和页面展示
+2. 后台管理（文章，分类，链接，用户）
+3. 文章使用ueditor富文本编辑器编辑
+4. 登陆和注册页面
+5. 自定义的错误提示页面
+
+使用方法
+
+部署网址
